--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
   "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "express-rate-limit": "^7.5.0",
-    "openai": "^4.89.0",
-    "puppeteer": "^24.3.1",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
+    "node-fetch": "^2.7.0",
+    "openai": "^4.67.3"
   }
 }
