--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.7.0",
-    "openai": "^4.67.3"
+    "openai": "^4.67.3",
+    "stripe": "^17.7.0"
   }
 }
