--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
+    "express-validator": "^7.2.0",
     "helmet": "^8.1.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.7.0",
     "openai": "^4.67.3",
-    "stripe": "^17.7.0"
+    "stripe": "^17.7.0",
+    "winston": "^3.15.0"
   }
 }
